--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <a class="navbar-brand" href="#"
-                           ><img src="img/Frame.png" alt=""
-                              /></a>
+                        <a class="navbar-brand" href="#"><img src="img/Frame.png" alt=""/></a>
                     </div>
                     <div class="col-8"></div>
                     <div class="col-2">
@@ -39,9 +37,8 @@
                                     data-bs-target="#navbarToggleExternalContent"
                                     aria-controls="navbarToggleExternalContent"
                                     aria-expanded="false"
-                                    aria-label="Toggle navigation"
-                                    >
-                                    <img class="icon" src="img/Group 8.svg" alt="" />
+                                    aria-label="Toggle navigation">
+                                    <img class="icon" src="img/Group 8.svg" alt=""/>
                                 </button>
                             </nav>
                             <a href="#"></a>
@@ -51,16 +48,11 @@
             </div>
             <div class="drop-down menu mt-5">
                 <div class="position-relative">
-                    <div
-                        class="menu-list collapse position-absolute w-100"
-                        id="navbarToggleExternalContent"
-                        >
+                    <div class="menu-list collapse position-absolute w-100" id="navbarToggleExternalContent">
                         <div class="container">
                             <div class="p-4">
                                 <div class="container-link">
-                                    <div
-                                        class="logo-menu-burger d-flex justify-content-between mt-3"
-                                        ></div>
+                                    <div class="logo-menu-burger d-flex justify-content-between mt-3"></div>
                                     <ul class="menu-link d-flex flex-column">
                                         <li>Где купить</li>
                                         <li>О препарате</li>
@@ -81,14 +73,12 @@
                 <div class="slider py-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col-3">
-                                <div
-                                    class="wrapper-link d-flex flex-column justify-content-between"
-                                    >
+                            <div class="col-sm-2">
+                                <div class="wrapper-link d-flex flex-column justify-content-between">
                                     <div class="text-left">
-                                        <h2>Надежный помощник в лечении варикоза</h2>
+                                        <h2>Надежный помощник <br>в лечении варикоза</h2>
                                     </div>
-                                    <div class="slider-links d-flex flex-column">
+                                    <div class="slider-links  d-none d-md-flex d-flex flex-column">
                                         <span class="slider-link"><img class="icon" src="img/Group 10.png" alt="" /> Схема приема</span>
                                         <span class="slider-link"><img class="icon" src="img/Group 11.png" alt="" /> Инструкция</span>
                                         <span class="slider-link"><img class="icon" src="img/Group 76.png" alt="" /> Где купить</span>
@@ -96,61 +86,34 @@
                                 </div>
                             </div>
 
-                            <div class="col-9">
+                            <div class="col-sm-10">
                                 <div class="carousel-wrapper">
-                                    <div
-                                        id="carouselExampleControls"
-                                        class="carousel slide d-flex align-items-end justify-content-center mb-5"
-                                        data-bs-ride="carousel">
+                                    <div id="carouselExampleControls" class="carousel slide d-flex align-items-end justify-content-center mb-5" data-bs-ride="carousel">
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img
-                                                    src="img/Group 87.png"
-                                                    class="img-slider"
-                                                    alt="..."
-                                                    />
+                                                <img src="img/Group 87.png" class="img-slider" alt="..."/>
                                             </div>
                                             <div class="carousel-item">
-                                                <img
-                                                    src="img/Group 87.png"
-                                                    class="img-slider"
-                                                    alt="..."
-                                                    />
+                                                <img src="img/Group 87.png" class="img-slider" alt="..."/>
                                             </div>
                                             <div class="carousel-item">
-                                                <img
-                                                    src="img/Group 87.png"
-                                                    class="img-slider"
-                                                    alt="..."
-                                                    />
+                                                <img src="img/Group 87.png" class="img-slider" alt="..."/>
                                             </div>
                                         </div>
                                         <div class="contrl-carusel d-flex position-absolute">
-                                            <button
-                                                class="carousel-control-prev"
-                                                type="button"
-                                                data-bs-target="#carouselExampleControls"
-                                                data-bs-slide="prev">
-                                                <span
-                                                    class="carousel-control-prev-icon"
-                                                    aria-hidden="true"></span>
+                                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                                 <span class="visually-hidden">Previous</span>
                                             </button>
 
-                                            <button
-                                                class="carousel-control-next"
-                                                type="button"
-                                                data-bs-target="#carouselExampleControls"
-                                                data-bs-slide="next">
-                                                <span
-                                                    class="carousel-control-next-icon"
-                                                    aria-hidden="true"></span>
+                                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                                 <span class="visually-hidden">Next</span>
                                             </button>
                                         </div>
                                     </div>
                                     <div class="order-button d-flex justify-content-center">
-                                        <button class="btn btn-primary btn-round" type="button">Где купить</button>
+                                        <button class="btn-buy" type="button">Где купить</button>
                                     </div>
                                 </div>
                             </div>
