--- a/index.html
+++ b/index.html
@@ -121,6 +121,105 @@
                     </div>
                 </div>
             </section>
+            <section class="line">
+                <div class="main-line">
+                    <marquee behavior="" direction="">ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>></marquee>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="complex col-12 d-flex justify-content-between">
+                            <li>Доказанная <br>эффективность</li>
+                            <li>Новая дозировка<br> 100 мг + 900 мг</li>
+                            <li>Удобный прием. <br>Одна таблетка в сутки *</li>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="main-complex d-flex justify-content-between">
+                            <div class="col-sm-2 ">
+                                <div class="head-text mt-5">
+                                    <h2>Комплексное действие</h2>
+                                    <p class="text-hed mt-5">
+                                        Венарус показан для терапии 
+                                        симптомов хронических 
+                                        заболеваний вен (устранения 
+                                        и облегчения симптомов).
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-sm-10 mt-5 ms-5">
+                               <div class="line-top border-top mt-3">
+                               </div>
+                               <div class="text-complex d-flex justify-content-evenly">
+                                <img class="mt-3" src="img/Group 49.png" alt="">
+                                <p class="text-complex mt-5">помогает <br> предотвратить судороги</p>
+                               </div>
+                               <div class="line-bottom border-bottom">
+                                <a class= "link-complex mt-5" href="#">подробнее</a>
+                               </div>
+
+                            <div class="text-complex d-flex justify-content-evenly">
+                             <p class="text-complex mt-5"> Способствует<br> снижению тяжести <br>в ногах</p>
+                             <img class="" src="img/Group 50.png" alt="">
+                            </div>
+                            <div class="line-bottom border-bottom">
+                             <a class= "link-complex" href="#">подробнее</a>
+                            </div>
+
+                            <div class="text-complex d-flex justify-content-evenly">
+                             <img class="mt-3" src="img/Group 52.png" alt="">
+                             <p class="text-complex mt-5">Способствует снижению<br>болевых ощущений</p>
+                            </div>
+                            <div class="line-bottom border-bottom">
+                             <a class= "link-complex mt-5" href="#">подробнее</a>
+                            </div>
+
+                            <div class="text-complex d-flex justify-content-evenly">
+                                <p class="text-complex mt-5">Помогает<br>уменьшить отеки</p>
+                                <img class="mt-3" src="img/Group 54.png" alt="">
+                               </div>
+                               <div class="line-bottom border-bottom">
+                                <a class= "link-complex" href="#">подробнее</a>
+                               </div>
+
+                            <div class="text-complex d-flex justify-content-evenly">
+                             <img class="mt-3" src="img/Group 74.png" alt="">
+                             <p class="text-complex mt-5">Оказывает <br> ангиопротекторное <br> и венотонизурующее <br>действие</p>
+                            </div>
+                            <div class="line-bottom border-bottom mb-5">
+                             <a class= "link-complex mt-5" href="#">подробнее</a>
+                            </div>
+
+
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="production">
+                <div class="container">
+                    <div class="row">
+                        <div class="main-production d-flex justify-content-between">
+                            <div class="col-2 mb-5">
+                                <h3>О производстве венарус</h3>
+                            </div>
+                            <div class="col-4 ms-5 mt-5">
+                                <img src="img/links_zavod_2.png" alt="">
+                            </div>
+                            <div class="col-5 mb-5">
+                                <img src="img/links_zavod_1.png" alt="">
+                                <div class="order-button d-flex justify-content-center">
+                                    <button class="btn-buy" type="button">Подробнее ></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer></footer>
 
