Добавление стилей бегущей строки

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </section>
             <section class="line">
                 <div class="main-line">
-                    <marquee behavior="" direction="">ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>></marquee>
+                    <marquee class="text mt-2" behavior="" direction="">ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>></marquee>
                 </div>
             </section>
             <section>
