--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
 
                             <div class="text-complex d-flex justify-content-evenly">
                                 <p class="text-complex mt-5">Помогает<br>уменьшить отеки</p>
-                                <img class="mt-3" src="img/Group 54.png" alt="">
+                                <img class="mt-3" src="img/Group 73.png" alt="">
                                </div>
                                <div class="line-bottom border-bottom">
                                 <a class= "link-complex" href="#">подробнее</a>
                                </div>
 
                             <div class="text-complex d-flex justify-content-evenly">
-                             <img class="mt-3" src="img/Group 74.png" alt="">
+                             <img class=" circle mt-3" src="img/Group 74.png" alt="">
                              <p class="text-complex mt-5">Оказывает <br> ангиопротекторное <br> и венотонизурующее <br>действие</p>
                             </div>
                             <div class="line-bottom border-bottom mb-5">
