добавление блока с картинками

--- a/index.html
+++ b/index.html
@@ -129,10 +129,19 @@
             <section>
                 <div class="container">
                     <div class="row">
-                        <div class="complex col-12 d-flex justify-content-between">
-                            <li>Доказанная <br>эффективность</li>
-                            <li>Новая дозировка<br> 100 мг + 900 мг</li>
-                            <li>Удобный прием. <br>Одна таблетка в сутки *</li>
+                        <div class="complex mt-5 col-12 d-flex justify-content-around">
+                       <div class="circle-min d-flex">
+                        <img src="img/Group 37.png" alt="">
+                       <p class=" ms-3">Доказанная<br>эффективность</p>
+                       </div>
+                       <div class="square d-flex">
+                        <img src="img/Group 35.png" alt="">
+                        <p class="ms-3">Новая дозировка <br>100мг + 900мг</p>
+                       </div>
+                       <div class="tabs d-inline-flex">
+                        <img src="img/Group 84.png" alt="">
+                        <p>Удобный прием. <br> Одна таблетка в сутки.</p>
+                       </div>
                         </div>
                     </div>
                 </div>
