--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-            crossorigin="anonymous"
-            />
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"/>
+            <link rel="stylesheet" href="css/owl.carousel.min.css">
+            <link rel="stylesheet" href="css/owl.theme.default.min.css">
         <link rel="stylesheet" href="css/style.css" />
         <title>Document</title>
     </head>
@@ -219,10 +217,43 @@
                             <div class="col-4 ms-5 mt-5">
                                 <img src="img/links_zavod_2.png" alt="">
                             </div>
-                            <div class="col-5 mb-5">
-                                <img src="img/links_zavod_1.png" alt="">
+                            <div class="video modal-fullscreen-sm-down  col-5 mb-5">
+                                <video controls src="/video/010.mp4"></video>
                                 <div class="order-button d-flex justify-content-center">
                                     <button class="btn-buy" type="button">Подробнее ></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="wrapper-slider">
+                            <div class="special  d-flex justify-content-between">
+                                <div class="col-2 ms-5">
+                                    <h3>Мнение специалистов</h3>
+                                    <p>
+                                        Фармакотерапия — неотъемлемый компонент современного лечения хронического заболевания вен.
+                                    </p>
+                                </div>
+                                <div class="col-10 ms-5">
+                                    <div class="slider-item ms-5">
+                                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                                            <div class="carousel-inner w-75">
+                                              <div class="carousel-item active">
+                                                <img src="img/13.37.png"  alt="...">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img src="img/13.37.png"  alt="...">
+                                              </div>
+                                              <div class="carousel-item">
+                                                <img src="img/13.37.png"  alt="...">
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -232,15 +263,13 @@
         </main>
         <footer></footer>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-            integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-            crossorigin="anonymous"
-        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <script src="/js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
+        <script>$('carousel').carousel({
+            interval: 50
+        });
+        </script>
     </body>
 </html>
