--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <p class="ms-3">Новая дозировка <br>100мг + 900мг</p>
                        </div>
                        <div class="tabs d-inline-flex">
-                        <img src="img/Group 84.png" alt="">
+                        <img class="me-3" src="img/Group 185.png" alt="">
                         <p>Удобный прием. <br> Одна таблетка в сутки.</p>
                        </div>
                         </div>
@@ -218,7 +218,7 @@
                                 <img src="img/links_zavod_2.png" alt="">
                             </div>
                             <div class="video modal-fullscreen-sm-down  col-5 mb-5">
-                                <video controls src="/video/010.mp4"></video>
+                               
                                 <div class="order-button d-flex justify-content-center">
                                     <button class="btn-buy" type="button">Подробнее ></button>
                                 </div>
@@ -230,33 +230,54 @@
             <section>
                 <div class="container">
                     <div class="row">
-                        <div class="wrapper-slider">
+                        <div class="wrapper-slider mb-5">
                             <div class="special  d-flex justify-content-between">
-                                <div class="col-2 ms-5">
+                                <div class="col-2 ms-5 me-5">
                                     <h3>Мнение специалистов</h3>
                                     <p>
                                         Фармакотерапия — неотъемлемый компонент современного лечения хронического заболевания вен.
                                     </p>
                                 </div>
-                                <div class="col-10 ms-5">
-                                    <div class="slider-item ms-5">
-                                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                                            <div class="carousel-inner w-75">
-                                              <div class="carousel-item active">
-                                                <img src="img/13.37.png"  alt="...">
-                                              </div>
-                                              <div class="carousel-item">
-                                                <img src="img/13.37.png"  alt="...">
-                                              </div>
-                                              <div class="carousel-item">
-                                                <img src="img/13.37.png"  alt="...">
-                                              </div>
-                                            </div>
-                                          </div>
+                                <div class="col-10 ms-5 d-flex justify-content-center">
+                                    <div class="owl-carousel ms-5 text-center">
+                                        <div class="item ms-5"><img src="img/13.37.png" alt=""></div>
+                                        <div class="item ms-5"><img src="img/13.37.png" alt=""></div>
+                                        
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="info">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-2">
+                            <h3 class="info-text">Полезная информация</h3>
+                            <p>ВЕНАРУС — НАДЕЖНЫЙ ПОМОЩНИК В ЛЕЧЕНИИ ВАРИКОЗА, ХРАНИТЕЛЬ ЖЕНСКИХ НОГ НА ПУТИ К ЕЕ МЕЧТЕ!</p>
+                        </div>
+                        <div class="info-group col-2"><img src="img/Group 82.png" alt=""></div>
+                        <div class="col-8">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="wrapper-content d-flex justify-content-evenly">
+                                        <img src="img/Group 83.png" alt="">
+                                        <img src="img/Group 84.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 ms-5">
+                                    <div class="wrapper-content-img ms-3 mt-3">
+                                        <img class="ms-5" src="img/Group 85.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info-button mt-5 d-flex justify-content-end">
+                        <button class="btn-info-buy mt-5" type="button">Где купить</button>
                     </div>
                 </div>
             </section>
@@ -266,9 +287,10 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="/js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
-        <script>$('carousel').carousel({
-            interval: 50
+        <script src="./js/owl.carousel.min.js"></script>
+        <script src="./js/main.js"></script>
+        <script>$('.carousel').carousel({
+            interval: 500
         });
         </script>
     </body>
