--- a/index.html
+++ b/index.html
@@ -277,12 +277,65 @@
                         </div>
                     </div>
                     <div class="info-button mt-5 d-flex justify-content-end">
-                        <button class="btn-info-buy mt-5" type="button">Где купить</button>
+                        <button class="btn-info-buy mt-5" type="button">Подробнее</button>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row mt-5">
+                        <div class="purchase d-flex justify-content-between">
+                            <div class="col-2">
+                                <h3 class="mt-5">Где купить</h3>
+                                <p>Ветонизирующее средство ВЕНАРУС вы можете приобрести в аптеках вашего города</p>
+                            </div>
+                            <div class="col-10 ms-5">
+                                <img class="ms-5" src="img/Group 94.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="buttons d-flex ms-5 justify-content-end">
+                        <button class="apteka mb-5 ms-5">Apteka.ru</button>
+                        <button class="three-hundred  mb-5 ms-5">366.ru</button>
+                        <button class="stolichki  mb-5 ms-5">Stolichki.ru</button>
                     </div>
                 </div>
             </section>
         </main>
-        <footer></footer>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mt-3">
+                        <h1>БИОЛОГИЧЕСКИ АКТИВНАЯ ДОБАВКА. НЕ ЯВЛЯЕТСЯ ЛЕКАРСТВОМ</h1>
+                    </div>
+                   <div class="footer-text-center mt-5">
+                    <div class="row">
+                        <div class="col-4">
+                            <p>Сообщить о нежелательном явлении</p>
+                        </div>
+                        <div class="col-4">
+                            <p>Условия пользования сайтом и файлами Cookies</p>
+                        </div>
+                        <div class="footer-social col-4 d-flex justify-content-evenly">
+                            <a href="#"><img src="img/vk-social-network-logo.png" alt=""></a>
+                            <a href="#"><img src="img/facebook.png" alt=""></a>
+                            <a href="#"><img src="img/twitter.png" alt=""></a>
+                            <a href="#"><img src="img/odnoklassniki (1).png" alt=""></a>
+                        </div>
+                        <div class="col-4 mt-5"></div>
+                        <div class="col-4 mt-5">
+                            <p>г. Москва, ул. Шаболовка, д. 31, стр. 11, 4 этаж<br>
+                                Телефон: +7 (495) 555-55-55</p>
+                        </div>
+                        <div class="col-3 mt-5 ms-5 d-flex">
+                            <img class="ms-3" src="img/Group 99.png" alt="">
+                            <p>Создание сайтов <br> Фарм-студия №1 в Рунете</p>
+                        </div>
+                    </div>
+                   </div>
+                </div>
+            </div>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
