--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                             <div class="col-4 ms-5 mt-5">
                                 <img src="img/links_zavod_2.png" alt="">
                             </div>
-                            <div class="video modal-fullscreen-sm-down  col-5 mb-5">
-                               
+                            <div class="link-zavod col-6 mb-5">
+                               <img class="pictures" src="img/links_zavod_1.png" alt="">
                                 <div class="order-button d-flex justify-content-center">
                                     <button class="btn-buy" type="button">Подробнее ></button>
                                 </div>
