--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <header class="header my-3">
             <div class="container">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-4 col-sm-2">
                         <a class="navbar-brand" href="#"><img src="img/Frame.png" alt=""/></a>
                     </div>
-                    <div class="col-8"></div>
-                    <div class="col-2">
+                    <div class="col-4 col-sm-8"></div>
+                    <div class="col-4 col-sm-2">
                         <div class="icons d-flex justify-content-between">
                             <a href="#">
                                 <img class="icon" src="img/Group 98.png" alt=""/>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="drop-down menu mt-5">
+            <div class="drop-down menu mt-sm-5 mt-1">
                 <div class="position-relative">
                     <div class="menu-list collapse position-absolute w-100" id="navbarToggleExternalContent">
                         <div class="container">
@@ -68,7 +68,7 @@
         </header>
         <main>
             <section class="py-3 section-slider">
-                <div class="slider py-5">
+                <div class="slider py-sm-5 py-1">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-2">
@@ -124,7 +124,7 @@
                     <marquee class="text mt-2" behavior="" direction="">ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>> ПОЛУЧИТЬ СКИДКУ 10% >>></marquee>
                 </div>
             </section>
-            <section>
+            <section class="p-2">
                 <div class="container">
                     <div class="row">
                         <div class="complex mt-5 col-12 d-flex justify-content-around">
@@ -227,7 +227,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="p-2">
                 <div class="container">
                     <div class="row">
                         <div class="wrapper-slider mb-5">
@@ -238,7 +238,7 @@
                                         Фармакотерапия — неотъемлемый компонент современного лечения хронического заболевания вен.
                                     </p>
                                 </div>
-                                <div class="col-10 ms-5 d-flex justify-content-center">
+                                <div class="col-10 col-sm-10 ms-5 d-flex justify-content-center">
                                     <div class="owl-carousel ms-5 text-center">
                                         <div class="item ms-5"><img src="img/13.37.png" alt=""></div>
                                         <div class="item ms-5"><img src="img/13.37.png" alt=""></div>
@@ -281,7 +281,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="p-2">
                 <div class="container">
                     <div class="row mt-5">
                         <div class="purchase d-flex justify-content-between">
@@ -303,6 +303,7 @@
             </section>
         </main>
         <footer class="footer">
+            <div class="footer-wrapper">
             <div class="container">
                 <div class="row">
                     <div class="col-12 mt-3">
@@ -334,7 +335,9 @@
                     </div>
                    </div>
                 </div>
+                
             </div>
+        </div>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
