--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="container">
+                <div class="p-2 container">
                     <div class="row">
-                        <div class="main-complex d-flex justify-content-between">
-                            <div class="col-sm-2 ">
+                        <div class="wrapper-action d-flex justify-content-between">
+                            <div class="col-12 col-md-3 ">
                                 <div class="head-text mt-5">
                                     <h2>Комплексное действие</h2>
                                     <p class="text-hed mt-5">
@@ -157,7 +157,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-sm-10 mt-5 ms-5">
+                            <div class="col-12 col-md-9 mt-5 ms-5">
                                <div class="line-top border-top mt-3">
                                </div>
                                <div class="text-complex d-flex justify-content-evenly">
@@ -207,90 +207,94 @@
                     </div>
                 </div>
             </section>
-            <section class="production">
-                <div class="container">
-                    <div class="row">
-                        <div class="main-production d-flex justify-content-between">
-                            <div class="col-2 mb-5">
-                                <h3>О производстве венарус</h3>
+            <section class="production d-flex align-items-center">
+                <div class="production-wrapper w-100">
+                    <div class="container h-100">
+                        <div class="row h-100 d-flex align-items-center">
+                            <div class="col-12 col-md-3">
+                                <div class="section-heading">
+                                    <h3>О производстве венарус</h3>
+                                </div>
                             </div>
-                            <div class="col-4 ms-5 mt-5">
+
+                            <div class="col-12 col-md-9">
                                 <img src="img/links_zavod_2.png" alt="">
+                                <img class="pictures img-fluid" src="img/links_zavod_1.png" alt="">
                             </div>
-                            <div class="link-zavod col-6 mb-5">
-                               <img class="pictures" src="img/links_zavod_1.png" alt="">
-                                <div class="order-button d-flex justify-content-center">
-                                    <button class="btn-buy" type="button">Подробнее ></button>
-                                </div>
+                            <div class="col-12 d-flex justify-content-end">
+                                <button class="btn btn-round btn-buy" type="button">Подробнее ></button>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="p-2">
+            <section class="specialists">
                 <div class="container">
                     <div class="row">
-                        <div class="wrapper-slider mb-5">
-                            <div class="special  d-flex justify-content-between">
-                                <div class="col-2 ms-5 me-5">
-                                    <h3>Мнение специалистов</h3>
-                                    <p>
-                                        Фармакотерапия — неотъемлемый компонент современного лечения хронического заболевания вен.
-                                    </p>
-                                </div>
-                                <div class="col-10 col-sm-10 ms-5 d-flex justify-content-center">
-                                    <div class="owl-carousel ms-5 text-center">
-                                        <div class="item ms-5"><img src="img/13.37.png" alt=""></div>
-                                        <div class="item ms-5"><img src="img/13.37.png" alt=""></div>
-                                        
+                        <div class="col-12 col-md-3">
+                            <div class="section-heading">
+                                <h3>Мнение специалистов</h3>
+                                <p>
+                                    Фармакотерапия — неотъемлемый компонент современного лечения хронического заболевания вен.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-9">
+                            <div class="specialists-slider">
+                                <div class="owl-carousel owl-theme">
+                                    <div class="item">
+                                        <img class="video-preview" src="img/13.37.png" alt="">
                                     </div>
+                                    <div class="item">
+                                        <img class="video-preview" src="img/13.37.png" alt="">
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="info">
+            <section class="info d-flex align-items-center">
+                <div class="production-wrapper w-100">
+                    <div class="container h-100">
+                        <div class="row">
+                            <div class="col-12 col-lg-3">
+                                <div class="section-heading">
+                                    <h3>Полезная информация</h3>
+                                    <p>ВЕНАРУС — НАДЕЖНЫЙ ПОМОЩНИК В ЛЕЧЕНИИ ВАРИКОЗА, ХРАНИТЕЛЬ ЖЕНСКИХ НОГ НА ПУТИ К ЕЕ МЕЧТЕ!</p>
+                                </div>
+                            </div>
+
+                            <div class="col-12 col-lg-9">
+                                <div class="d-flex justify-content-center justify-content-lg-end">
+                                    <div class="grid-container">
+                                        <div id="left"></div>
+                                        <div id="top-left"></div>
+                                        <div id="top-right"></div>
+                                        <div id="bottom"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info-button mt-5 d-flex justify-content-end">
+                            <button class="btn btn-round btn-pink" type="button">Подробнее</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="p-2 mt-5">
                 <div class="container">
                     <div class="row">
-                        <div class="col-2">
-                            <h3 class="info-text">Полезная информация</h3>
-                            <p>ВЕНАРУС — НАДЕЖНЫЙ ПОМОЩНИК В ЛЕЧЕНИИ ВАРИКОЗА, ХРАНИТЕЛЬ ЖЕНСКИХ НОГ НА ПУТИ К ЕЕ МЕЧТЕ!</p>
-                        </div>
-                        <div class="info-group col-2"><img src="img/Group 82.png" alt=""></div>
-                        <div class="col-8">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="wrapper-content d-flex justify-content-evenly">
-                                        <img src="img/Group 83.png" alt="">
-                                        <img src="img/Group 84.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 ms-5">
-                                    <div class="wrapper-content-img ms-3 mt-3">
-                                        <img class="ms-5" src="img/Group 85.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="info-button mt-5 d-flex justify-content-end">
-                        <button class="btn-info-buy mt-5" type="button">Подробнее</button>
-                    </div>
-                </div>
-            </section>
-            <section class="p-2">
-                <div class="container">
-                    <div class="row mt-5">
-                        <div class="purchase d-flex justify-content-between">
-                            <div class="col-2">
-                                <h3 class="mt-5">Где купить</h3>
+                        <div class="col-12 col-md-3">
+                            <div class="section-heading mt-5">
+                                <h3>Где купить</h3>
                                 <p>Ветонизирующее средство ВЕНАРУС вы можете приобрести в аптеках вашего города</p>
                             </div>
-                            <div class="col-10 ms-5">
-                                <img class="ms-5" src="img/Group 94.png" alt="">
+                        </div>
+                        <div class="col-12 col-lg-9">
+                            <div class="d-flex justify-content-center justify-content-lg-end">
+                                <img class="img-fluid" src="img/Group 94.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -351,3 +355,6 @@
         </script>
     </body>
 </html>
+
+
+
